--- a/ranking.html
+++ b/ranking.html
@@ -13,15 +13,33 @@
         <a href="index.html">個数入力ページへ</a>
     </div>
     <script>
-    function getEntries() {
-        return JSON.parse(localStorage.getItem('entries') || '[]');
+    const SUPABASE_URL = 'https://zsefdiivatbmzynlovwj.supabase.co';
+    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpzZWZkaWl2YXRibXp5bmxvdndqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTcwNDkyNzUsImV4cCI6MjA3MjYyNTI3NX0.sva0fJJrHa43SMtoGLQ2rvWpbmAH2j3UYU8knSrDwNk';
+
+    async function getEntries() {
+        const res = await fetch(`${SUPABASE_URL}/rest/v1/ranking?select=*`, {
+            headers: {
+                'apikey': SUPABASE_KEY,
+                'Authorization': `Bearer ${SUPABASE_KEY}`
+            }
+        });
+        return await res.json();
     }
-    function renderRanking() {
+
+    async function renderRanking() {
         const list = document.getElementById('rankingList');
         list.innerHTML = '';
-        const entries = getEntries();
-        entries.sort((a, b) => b.count - a.count);
-        entries.forEach((entry, idx) => {
+        const entries = await getEntries();
+        // 名前ごとに最高記録のみ抽出
+        const bestEntries = {};
+        entries.forEach((entry) => {
+            if (!bestEntries[entry.name] || bestEntries[entry.name].count < entry.count) {
+                bestEntries[entry.name] = entry;
+            }
+        });
+        const uniqueEntries = Object.values(bestEntries);
+        uniqueEntries.sort((a, b) => b.count - a.count);
+        uniqueEntries.forEach((entry, idx) => {
             const li = document.createElement('li');
             li.className = 'entry-item';
             li.innerHTML = `<span>${idx+1}位：${entry.name}（${entry.count}個）</span>`;
@@ -29,12 +47,6 @@
         });
     }
     document.addEventListener('DOMContentLoaded', renderRanking);
-    // ローカルストレージの変更を監視してランキングを自動更新
-    window.addEventListener('storage', function(e) {
-        if (e.key === 'entries') {
-            renderRanking();
-        }
-    });
     </script>
 </body>
 </html>
