--- a/index.html
+++ b/index.html
@@ -22,23 +22,13 @@
     </div>
     <script src="script.js"></script>
     <script>
-    // Supabaseの設定はscript.jsと同じものを利用
-    const SUPABASE_URL = 'https://zsefdiivatbmzynlovwj.supabase.co';
-    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpzZWZkaWl2YXRibXp5bmxvdndqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTcwNDkyNzUsImV4cCI6MjA3MjYyNTI3NX0.sva0fJJrHa43SMtoGLQ2rvWpbmAH2j3UYU8knSrDwNk';
-
-    async function getEntries() {
-        const res = await fetch(`${SUPABASE_URL}/rest/v1/ranking?select=*`, {
-            headers: {
-                'apikey': SUPABASE_KEY,
-                'Authorization': `Bearer ${SUPABASE_KEY}`
-            }
-        });
-        return await res.json();
-    }
-
-    function renderNameButtons() {
+    window.renderNameButtons = function() {
+        // script.jsのgetEntriesを利用
+        if (typeof getEntries !== 'function') {
+            console.error('getEntriesが定義されていません');
+            return;
+        }
         getEntries().then(entries => {
-            // 名前ごとに最高記録のみ抽出
             const bestEntries = {};
             entries.forEach((entry) => {
                 if (!bestEntries[entry.name] || bestEntries[entry.name].count < entry.count) {
@@ -60,8 +50,9 @@
             });
         });
     }
-
-    document.addEventListener('DOMContentLoaded', renderNameButtons);
+    document.addEventListener('DOMContentLoaded', function() {
+        if (window.renderNameButtons) window.renderNameButtons();
+    });
     </script>
 </body>
 </html>
