個数入力ページのHTMLを削除し、ランキングページの自動更新機能を無効化

--- a/index.html
+++ b/index.html
@@ -1,58 +1,1 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>スーパーボールすくい個数入力</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>個数入力</h1>
-        <form id="entryForm">
-            <div id="nameSelectArea">
-                <span id="nameButtons"></span>
-                <input type="text" id="name" placeholder="新しい名前" style="margin-top:8px;">
-            </div>
-            <input type="number" id="count" placeholder="すくった数" min="0" required>
-            <button type="submit">追加</button>
-        </form>
-        <ul id="entryList"></ul>
-        <a href="ranking.html">ランキングを見る</a>
-    </div>
-    <script src="script.js"></script>
-    <script>
-    window.renderNameButtons = function() {
-        // script.jsのgetEntriesを利用
-        if (typeof getEntries !== 'function') {
-            console.error('getEntriesが定義されていません');
-            return;
-        }
-        getEntries().then(entries => {
-            const bestEntries = {};
-            entries.forEach((entry) => {
-                if (!bestEntries[entry.name] || bestEntries[entry.name].count < entry.count) {
-                    bestEntries[entry.name] = entry;
-                }
-            });
-            const uniqueNames = Object.keys(bestEntries);
-            const nameButtons = document.getElementById('nameButtons');
-            nameButtons.innerHTML = '';
-            uniqueNames.forEach(name => {
-                const btn = document.createElement('button');
-                btn.type = 'button';
-                btn.textContent = name;
-                btn.className = 'name-btn';
-                btn.onclick = () => {
-                    document.getElementById('name').value = name;
-                };
-                nameButtons.appendChild(btn);
-            });
-        });
-    }
-    document.addEventListener('DOMContentLoaded', function() {
-        if (window.renderNameButtons) window.renderNameButtons();
-    });
-    </script>
-</body>
-</html>
+<!-- このファイルは個数入力ページです。アクセスしづらくするため、URLを直接知らないと入れません。 -->
